=== gnome-vfs 2.5.90 ===

2004-03-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.5.90
	
2004-03-08  Dave Camp  <dave@ximian.com>

	* modules/sftp-method.c: (sftp_connect), (sftp_get_connection),
	(sftp_connection_close), (sftp_connection_ref),
	(close_and_remove_connection), (sftp_connection_unref), (do_open),
	(do_create), (do_write), (do_get_file_info), (do_open_directory),
	(do_make_directory), (do_remove_directory), (do_move), (do_rename),
	(do_unlink), (do_set_file_info), (do_create_symlink),
	(close_thunk), (vfs_module_shutdown): Fix some threadsafety and
	refcounting problems.

2004-03-07  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-utils.c: (gnome_vfs_get_volume_free_space):
	Fixed a small leak on Sun machines

2004-03-05  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-ops.c (emit_pre_unmount):
	Do a synchronous pre_unmount in this process and delay to
	allow other processes to release their hold on the device.

2004-03-05  Alexander Larsson  <alexl@redhat.com>

	* modules/default-modules.conf (sftp):
	Don't include "lib" and ".so" in library reference.
	Noticed by Michael Wilson <Michael.Wilson@bull.net>
	
2004-03-05  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/xdgmimemagic.c: fix sniffing for mime types using
	  nested patterns (application/x-core for example)
	
2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* modules/http-method.c:
	Don't send host:port when port undefined
	Remove webdav hack from last checkin that was caused by this.

2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* modules/http-method.c (make_propfind_request):
	Handle redirects in PROPFIND.
	Force slash on end of uri for open_directory.

2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Actually define HAVE_OPENSSL when used.

2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/xdgmimeint.h: 
	* libgnomevfs/xdgmimeint.c:
	Fix some declarations.
